--- a/sdk/documentintelligence/azure-ai-documentintelligence/pom.xml
+++ b/sdk/documentintelligence/azure-ai-documentintelligence/pom.xml
@@ -38,6 +38,7 @@
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
       --add-opens com.azure.ai.documentintelligence/com.azure.ai.documentintelligence=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+    <parallelizeLiveTests>false</parallelizeLiveTests>
     <graalvm.disable>false</graalvm.disable>
   </properties>
 
@@ -57,11 +58,6 @@
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.36</version> <!-- {x-version-update;org.slf4j:slf4j-simple;external_dependency} -->
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-core-experimental</artifactId>
-      <version>1.0.0-beta.46</version> <!-- {x-version-update;com.azure:azure-core-experimental;dependency} -->
     </dependency>
 
     <!-- Test Dependencies -->
