--- a/sdk/resourcemanager/azure-resourcemanager-appservice/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-appservice/pom.xml
@@ -51,6 +51,7 @@
 
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+    <revapi.skip>true</revapi.skip>
   </properties>
 
   <developers>
