--- a/sdk/quota/azure-resourcemanager-quota/pom.xml
+++ b/sdk/quota/azure-resourcemanager-quota/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-quota</artifactId>
-  <version>1.0.0-beta.4</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-quota;current} -->
+  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-quota;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for quota Management</name>
