--- a/sdk/contentsafety/azure-ai-contentsafety/pom.xml
+++ b/sdk/contentsafety/azure-ai-contentsafety/pom.xml
@@ -43,7 +43,7 @@
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jacoco.skip>true</jacoco.skip>
+    <jacoco.skip>false</jacoco.skip>
   </properties>
   <dependencies>
     <dependency>
