--- a/sdk/communication/azure-communication-jobrouter/tsp-location.yaml
+++ b/sdk/communication/azure-communication-jobrouter/tsp-location.yaml
@@ -1,4 +1,4 @@
-commit: e237298f554742f54ab7e62c4a96080f972bcfa5
+commit: demo_tsp-customization
 directory: specification/communication/Communication.JobRouter
 additionalDirectories: []
 repo: Azure/azure-rest-api-specs
