--- a/sdk/deviceregistry/azure-resourcemanager-deviceregistry/tsp-location.yaml
+++ b/sdk/deviceregistry/azure-resourcemanager-deviceregistry/tsp-location.yaml
@@ -1,4 +1,4 @@
-commit: 7ed015e3dd1b8b1b0e71c9b5e6b6c5ccb8968b3a
-repo: Azure/azure-rest-api-specs
 directory: specification/deviceregistry/DeviceRegistry.Management
-additionalDirectories: []
+commit: 552b4dd311f90f4a7b2f7adf45461d7a8774a1cc
+repo: Azure/azure-rest-api-specs
+additionalDirectories: 
