--- a/sdk/core/azure-core-http-jdk-httpclient/pom.xml
+++ b/sdk/core/azure-core-http-jdk-httpclient/pom.xml
@@ -77,14 +77,14 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.55.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.54.2</version> <!-- {x-version-update;com.azure:azure-core;current} -->
     </dependency>
 
     <!-- test dependencies on azure-core, because we want to run tests inherited from this module using JDK 11 HttpClient -->
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.55.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.54.2</version> <!-- {x-version-update;com.azure:azure-core;current} -->
       <classifier>tests</classifier>
       <type>test-jar</type>
       <scope>test</scope>
