--- a/sdk/core/azure-core-http-vertx/pom.xml
+++ b/sdk/core/azure-core-http-vertx/pom.xml
@@ -78,7 +78,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.55.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.54.2</version> <!-- {x-version-update;com.azure:azure-core;current} -->
     </dependency>
 
     <!-- Required to satisfy the -Xlint:classfile compiler option -->
@@ -99,7 +99,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.55.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.54.2</version> <!-- {x-version-update;com.azure:azure-core;current} -->
       <classifier>tests</classifier>
       <type>test-jar</type>
       <scope>test</scope>
