--- a/sdk/core/azure-core-perf/pom.xml
+++ b/sdk/core/azure-core-perf/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.55.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.54.2</version> <!-- {x-version-update;com.azure:azure-core;current} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
