address spellcheck and module access

--- a/sdk/ai/azure-ai-inference/pom.xml
+++ b/sdk/ai/azure-ai-inference/pom.xml
@@ -49,6 +49,9 @@
     <checkstyle.suppressionsLocation>checkstyle-suppressions.xml</checkstyle.suppressionsLocation>
     <spotbugs.skip>false</spotbugs.skip>
     <spotbugs.excludeFilterFile>spotbugs-exclude.xml</spotbugs.excludeFilterFile>
+    <javaModulesSurefireArgLine>
+      --add-reads com.azure.ai.inference=com.azure.core.tracing.opentelemetry
+    </javaModulesSurefireArgLine>
   </properties>
   <dependencies>
     <dependency>
