--- a/sdk/keyvault/azure-security-keyvault-certificates/TempTypeSpecFiles/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/sdk/keyvault/azure-security-keyvault-certificates/TempTypeSpecFiles/Security.KeyVault.Certificates/tspconfig.yaml
@@ -27,6 +27,8 @@ options:
     "package-dir": "azure-security-keyvault-certificates"
     "namespace": "com.azure.security.keyvault.certificates"
     "models-subpackage": "implementation.models"
+    "custom-types": "AdministratorContact,CertificateContact,CertificateKeyCurveName,CertificateKeyType,CertificateKeyUsage,CertificateOperationError,SubjectAlternativeNames"
+    "custom-types-subpackage": "models"
     "customization-class": "swagger/src/main/java/CertificatesCustomizations.java"
     "partial-update": true
     "generate-tests": false
