Parallel run by test resource, cherry-pick from https://github.com/Azure/azure-sdk-for-java/pull/43256

--- a/sdk/spring/pipeline/tests-supported-spring-versions-template.yml
+++ b/sdk/spring/pipeline/tests-supported-spring-versions-template.yml
@@ -19,7 +19,7 @@ parameters:
     default: '-Denforcer.skip=true'
   - name: TestResourceDirectories
     type: object
-    default:
+    default: []
   - name: MatrixConfigs
     type: object
     default:
