Fix proxy config for Key Vault proxy clients

--- a/sdk/keyvault/azure-security-keyvault-certificates/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-certificates/proxy-config.json
+++ b/sdk/keyvault/azure-security-keyvault-certificates/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-certificates/proxy-config.json
@@ -1,6 +1,6 @@
 [
   [
-    "com.azure.security.keyvault.certificates.implementation.CertificateClientImpl$CertificateService"
+    "com.azure.security.keyvault.certificates.implementation.CertificateClientImpl$CertificateClientService"
   ],
   [
     "com.microsoft.aad.msal4jextensions.persistence.mac.ISecurityLibrary"
