--- a/sdk/keyvault/azure-security-keyvault-keys/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-keys/proxy-config.json
+++ b/sdk/keyvault/azure-security-keyvault-keys/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-keys/proxy-config.json
@@ -1,5 +1,8 @@
 [
   [
-    "com.azure.security.keyvault.keys.implementation.KeyClientImpl$KeyService"
+    "com.azure.security.keyvault.keys.implementation.KeyClientImpl$KeyClientService"
+  ],
+  [
+    "com.azure.security.keyvault.keys.implementation.SecretMinClientImpl$SecretMinClientService"
   ]
 ]
