--- a/sdk/monitor/azure-monitor-opentelemetry-autoconfigure/pom.xml
+++ b/sdk/monitor/azure-monitor-opentelemetry-autoconfigure/pom.xml
@@ -186,6 +186,12 @@
       <version>3.9.1</version> <!-- {x-version-update;com.squareup.okio:okio;external_dependency} -->
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>33.2.1-jre</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
