Fix missing bean app context provider bean and enable ITs using custom token credential (#43131)
* Enable ITs using custom token credential
* Fix missing bean app context provider bean
* Parallel run by test resource, cherry-pick from https://github.com/Azure/azure-sdk-for-java/pull/43256

--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-appconfiguration.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-appconfiguration.yml
@@ -1,5 +1,7 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       appconfiguration:
         endpoint: ${AZURE_APPCONFIGURATION_ENDPOINT}
