--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-cosmos-springdata.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-cosmos-springdata.yml
@@ -1,6 +1,8 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       cosmos:
         endpoint: ${AZURE_COSMOS_ENDPOINT}
         database: ${AZURE_COSMOS_SPRING_DATA_DATABASE}
