--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-cosmos.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-cosmos.yml
@@ -1,5 +1,7 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       cosmos:
         endpoint: ${AZURE_COSMOS_ENDPOINT}
