--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-eventhubs.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-eventhubs.yml
@@ -1,8 +1,12 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       eventhubs:
         processor:
+          credential:
+            token-credential-bean-name: integrationTestTokenCredential
           initial-partition-event-position:
             0:
               offset: earliest
