--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-jdbc-mysql.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-jdbc-mysql.yml
@@ -1,4 +1,8 @@
 spring:
+  cloud:
+    azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
   datasource:
     url: jdbc:mysql://${AZURE_MYSQL_ENDPOINT}:3306/db
     username: passwordless-mysql-test-admin@${AZURE_MYSQL_ACCOUNT_NAME}
