--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-keyvault-secret.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-keyvault-secret.yml
@@ -1,6 +1,8 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       keyvault:
         secret:
           endpoint: ${AZURE_KEYVAULT_SECRET_ENDPOINT}
