--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-jms-passwordless.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-jms-passwordless.yml
@@ -1,4 +1,8 @@
 spring:
+  cloud:
+    azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
   jms:
     servicebus:
       enabled: true
