--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-jms.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-jms.yml
@@ -1,4 +1,8 @@
 spring:
+  cloud:
+    azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
   jms:
     servicebus:
       connection-string: ${AZURE_SERVICE_BUS_JMS_CONNECTION_STRING}
