--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-storage-fileshare.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-storage-fileshare.yml
@@ -1,6 +1,8 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       storage:
         fileshare:
           account-name: ${AZURE_STORAGE_ACCOUNT_NAME}
