--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-eventhubs-binder.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-eventhubs-binder.yml
@@ -4,6 +4,8 @@ spring:
       eventhubs:
         namespace: ${AZURE_EVENTHUBS_NAMESPACE}
         processor:
+          credential:
+            token-credential-bean-name: integrationTestTokenCredential
           checkpoint-store:
             account-name: ${AZURE_STORAGE_ACCOUNT_NAME}
             endpoint: ${AZURE_STORAGE_BLOB_ENDPOINT}
