--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus.yml
@@ -1,6 +1,8 @@
 spring:
   cloud:
     azure:
+      credential:
+        token-credential-bean-name: integrationTestTokenCredential
       servicebus:
         namespace: ${AZURE_SERVICE_BUS_NAMESPACE}
         entity-name: ${AZURE_SERVICE_BUS_ENTITY_NAME}
