--- a/sdk/core/pom.xml
+++ b/sdk/core/pom.xml
@@ -11,6 +11,7 @@
 
   <modules>
     <module>azure-core</module>
+    <module>azure-core-v2</module>
     <module>azure-core-amqp</module>
     <module>azure-core-amqp-experimental</module>
     <module>azure-core-experimental</module>
