--- a/sdk/apicenter/azure-resourcemanager-apicenter/pom.xml
+++ b/sdk/apicenter/azure-resourcemanager-apicenter/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-apicenter</artifactId>
-  <version>1.1.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-apicenter;current} -->
+  <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-apicenter;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for ApiCenter Management</name>
