--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-single-binder.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-single-binder.yml
@@ -9,14 +9,14 @@ spring:
       default-binder: servicebus
       bindings:
         topicConsume-in-0:
-          destination: topic1
+          destination: single_binder_topic
           group: topicSub
         topicSupply-out-0:
-          destination: topic1
+          destination: single_binder_topic
         queueConsume-in-0:
-          destination: queue1
+          destination: single_binder_queue
         queueSupply-out-0:
-          destination: queue1
+          destination: single_binder_queue
       servicebus:
         bindings:
           queueConsume-in-0:
