--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-multi-binders-no-inherit.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-multi-binders-no-inherit.yml
@@ -5,16 +5,16 @@ spring:
     stream:
       bindings:
         topicConsume-in-0:
-          destination: topic1
+          destination: single_multi_binder_no_inherit_topic
           group: topicSub
         topicSupply-out-0:
-          destination: topic1
+          destination: single_multi_binder_no_inherit_topic
         queueConsume-in-0:
           binder: servicebus-2
-          destination: queue1
+          destination: single_multi_binder_no_inherit_queue
         queueSupply-out-0:
           binder: servicebus-2
-          destination: queue1
+          destination: single_multi_binder_no_inherit_queue
       binders:
         servicebus-1:
           type: servicebus
