--- a/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-single-binder-no-inherit.yml
+++ b/sdk/spring/spring-cloud-azure-integration-tests/src/test/resources/application-servicebus-single-binder-no-inherit.yml
@@ -6,14 +6,14 @@ spring:
       default-binder: servicebus
       bindings:
         topicConsume-in-0:
-          destination: topic1
+          destination: single_binder_no_inherit_topic
           group: topicSub
         topicSupply-out-0:
-          destination: topic1
+          destination: single_binder_no_inherit_topic
         queueConsume-in-0:
-          destination: queue1
+          destination: single_binder_no_inherit_queue
         queueSupply-out-0:
-          destination: queue1
+          destination: single_binder_no_inherit_queue
       binders:
         servicebus:
           inherit-environment: false
