--- a/sdk/playwrighttesting/azure-resourcemanager-playwrighttesting/pom.xml
+++ b/sdk/playwrighttesting/azure-resourcemanager-playwrighttesting/pom.xml
@@ -89,5 +89,11 @@
       <version>1.15.5</version> <!-- {x-version-update;testdep_net.bytebuddy:byte-buddy-agent;external_dependency} -->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.azure.resourcemanager</groupId>
+      <artifactId>azure-resourcemanager-resources</artifactId>
+      <version>2.45.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-resources;dependency} -->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
