--- a/sdk/batch/azure-resourcemanager-batch/pom.xml
+++ b/sdk/batch/azure-resourcemanager-batch/pom.xml
@@ -80,5 +80,11 @@
       <version>2.45.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-storage;dependency} -->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.azure.resourcemanager</groupId>
+      <artifactId>azure-resourcemanager-resources</artifactId>
+      <version>2.45.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-resources;dependency} -->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
