--- a/sdk/clientcore/core/pom.xml
+++ b/sdk/clientcore/core/pom.xml
@@ -17,7 +17,7 @@
   <packaging>jar</packaging>
   <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:core;current} -->
 
-  <name>Java Core Library for building client libraries for accessing web services.</name>
+  <name>Core Library for building Java client libraries for accessing web services.</name>
   <description>This library contains core types for building Java client libraries for accessing web services.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
