--- a/eng/pipelines/templates/stages/archetype-sdk-client-patch.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client-patch.yml
@@ -252,6 +252,11 @@ extends:
                 filePath: eng/versioning/pom_file_version_scanner.ps1
                 arguments: -Debug:$$(IsDebug)
 
+            - task: PythonScript@0
+              displayName: 'Verify version text files'
+              inputs:
+                scriptPath: eng/versioning/find_unused_dependencies.py
+
             # Do all the verifications for all the artifacts after the sparse-checkout.
             - pwsh: |
                 $ArtifactsList = $('$(ArtifactsJson)' | ConvertFrom-Json | Select-Object name, groupId)
