--- a/sdk/frontdoor/azure-resourcemanager-frontdoor/pom.xml
+++ b/sdk/frontdoor/azure-resourcemanager-frontdoor/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-frontdoor</artifactId>
-  <version>1.1.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-frontdoor;current} -->
+  <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-frontdoor;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for FrontDoor Management</name>
