--- a/sdk/chaos/azure-resourcemanager-chaos/pom.xml
+++ b/sdk/chaos/azure-resourcemanager-chaos/pom.xml
@@ -46,6 +46,7 @@
     <jacoco.min.linecoverage>0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0</jacoco.min.branchcoverage>
     <spotless.skip>false</spotless.skip>
+    <revapi.skip>true</revapi.skip>
   </properties>
   <dependencies>
     <dependency>
