--- a/sdk/storage/azure-storage-blob-stress/templates/stress-test-job.yaml
+++ b/sdk/storage/azure-storage-blob-stress/templates/stress-test-job.yaml
@@ -43,10 +43,10 @@ spec:
             -XX:MaxRAMPercentage=50 \
             -XX:+HeapDumpOnOutOfMemoryError \
             -XX:HeapDumpPath="${DEBUG_SHARE}" \
-            -Dreactor.schedulers.defaultBoundedElasticSize={{ default 5 .Stress.parallelRuns }} \
+            -Dreactor.schedulers.defaultBoundedElasticSize={{ 25 }} \
             -jar /app/azure-storage-blob-stress-1.0.0-beta.1-jar-with-dependencies.jar \
             {{ .Stress.testScenario }} \
-            --parallel {{ default 5 .Stress.parallelRuns }} \
+            --parallel {{ default 3 .Stress.parallelRuns }} \
             --maxConcurrency {{ default 10 .Stress.maxConcurrency }} \
             --duration {{ mul 60 .Stress.durationMin }} \
             --size {{ .Stress.sizeBytes }} \
