--- a/sdk/clientcore/tools/pom.xml
+++ b/sdk/clientcore/tools/pom.xml
@@ -5,10 +5,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.clientcore</groupId>
-  <artifactId>clientcore-tools-service</artifactId>
+  <artifactId>clientcore-tools-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.0.0</version> <!-- Need not change for every release-->
   <modules>
-    <module>sdk-codegen-tool</module>
+    <module>annotation-processor</module>
   </modules>
 </project>
