--- a/eng/pipelines/templates/steps/build-and-test.yml
+++ b/eng/pipelines/templates/steps/build-and-test.yml
@@ -255,7 +255,7 @@ steps:
   # The name of a test case in the results file isn't helpful in the web view.
   # Update it to include the breadcrumb namespace and the type.
   - pwsh: |
-      Get-ChildItem "TEST-*.xml" -Path | ForEach-Object {
+      Get-ChildItem "TEST-*.xml" | ForEach-Object {
       [xml]$xml = Get-Content $_.FullName
       $xml.SelectNodes("//testcase") | ForEach-Object {
           $parts = $_.classname -split '\.'
