--- a/sdk/clientcore/pom.xml
+++ b/sdk/clientcore/pom.xml
@@ -13,5 +13,6 @@
     <module>core</module>
     <module>http-okhttp3</module>
     <module>http-stress</module>
+    <module>optional-dependency-tests</module>
   </modules>
 </project>
