logging event builder -> logging event

--- a/sdk/clientcore/core/src/main/resources/META-INF/native-image.io.clientcore.core/native-image.properties
+++ b/sdk/clientcore/core/src/main/resources/META-INF/native-image.io.clientcore.core/native-image.properties
@@ -20,7 +20,7 @@ Args=\
                              io.clientcore.core.util.ClientLogger.LogLevel,\
                              io.clientcore.core.util.Configuration,\
                              io.clientcore.core.util.implementation.ImplUtils,\
-                             io.clientcore.core.util.ClientLogger.LoggingEventBuilder,\
+                             io.clientcore.core.util.ClientLogger.LoggingEvent,\
 
 
 
